testsuite/poke.pkl/break-diag-2.pk
/* { dg-do compile } */

while (1)
  {
    type Foo = struct { var lala = { break; } ?! E_generic; }; /* { dg-error "" } */
    Foo {};
  }
